force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of project</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>