force-app/main/default/objects/Project__c/fields/Project_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Finish_Date__c</fullName>
    <description>Due date for project</description>
    <label>Project Finish Date</label>
    <type>Date</type>
</CustomField>