force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Project_Finish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>